--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!-- Formulário INICIO -->
                 <form class="form-horizontal" role="form" id="trip_plan_form">
                     <div class="form-group">
-                        <label for="arriveBy" class="control-label col-lg-4" data-handlebars>Quando</label>
+                        <label for="arriveBy" class="control-label col-lg-4" data-handlebars>{{labels.when}}</label>
                         <div class="col-lg-8" data-handlebars>
                             <select name="arriveBy" id="arriveBy" class="form-control">
                                 <option value="false" data-handlebars>{{labels.depart}}</option>
