Início dos testes walkTotal
Ainda tá um 31 essa parada.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- Direções após a chamada à API -->
                 <div class="resultados">
                     <!-- Info da trip INICIO -->
-                    <div class="info_trip">
+                    <div class="info_trip escondido">
                         <h4 class="titulo_detalhes" data-handlebars>{{labels.trip_details}}</h4>
                         <dl>
                             <dt class="primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
