--- a/index.html
+++ b/index.html
@@ -69,38 +69,48 @@
                 <div class="resultados">
                     <!-- Info da trip INICIO -->
                     <div class="info_trip escondido">
-                        <h4 class="titulo_detalhes" data-handlebars>{{labels.trip_details}}</h4>
+                        <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
+                        <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
+                        <div class="clear"></div><br><br>
                         <dl>
                             <dt class="primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
-                            <dd class="primeiro">dd/mm/yyyy @ hh:ii</dd>
+                            <dd class="primeiro">&nbsp;</dd>
 
                             <dt class="hora" data-handlebars>{{labels.time}}</dt>
-                            <dd>hh:ii:ss</dd>
+                            <dd>&nbsp;</dd>
 
                             <dt class="validade" data-handlebars>**{{labels.validity}}</dt>
                             <dd>dd/mm/yyyy @ hh:ii:ss</dd>
 
                             <dt class="distancia_total" data-handlebars>**{{labels.total_distance}}</dt>
-                            <dd>↓ distancia_total ↓</dd>
-                                <dt class="sub distancia_pe" data-handlebars>{{labels.by_foot}}</dt>
-                                <dd class="sub">distancia_pe</dd>
+                            <dd class="link" data-mostrar="distancias">
+                                <span class="setinhas baixo">&nbsp;</span>
+                                <span class="texto">&nbsp;</span>
+                                <span class="setinhas baixo">&nbsp;</span>
+                            </dd>
+                                <dt data-mostrado="distancias" class="sub distancia_pe" data-handlebars>{{labels.by_foot}}</dt>
+                                <dd data-mostrado="distancias" class="sub">&nbsp;</dd>
 
-                                <dt class="sub distancia_transportes" data-handlebars>**{{labels.by_transport}}</dt>
-                                <dd class="sub">distance_autocarro</dd>
+                                <dt data-mostrado="distancias" class="sub distancia_transportes" data-handlebars>**{{labels.by_transport}}</dt>
+                                <dd data-mostrado="distancias" class="sub">&nbsp;</dd>
 
                             <dt class="duracao_total" data-handlebars>{{labels.total_duration}}</dt>
-                            <dd>duracao_total</dd>
-                                <dt class="sub duracao_pe" data-handlebars>{{labels.by_foot}}</dt>
-                                <dd class="sub">duracao_pe</dd>
+                            <dd class="link"data-mostrar="duracoes">
+                                <span class="setinhas baixo">&nbsp;</span>
+                                <span class="texto">&nbsp;</span>
+                                <span class="setinhas baixo">&nbsp;</span>
+                            </dd>
+                                <dt data-mostrado="duracoes" class="sub duracao_pe" data-handlebars>{{labels.by_foot}}</dt>
+                                <dd data-mostrado="duracoes" class="sub">&nbsp;</dd>
 
-                                <dt class="sub duracao_transportes" data-handlebars>{{labels.by_transport}}</dt>
-                                <dd class="sub">duracao_autocarro</dd>
+                                <dt data-mostrado="duracoes" class="sub duracao_transportes" data-handlebars>{{labels.by_transport}}</dt>
+                                <dd data-mostrado="duracoes" class="sub">&nbsp;</dd>
 
                             <dt class="inicio_viagem" data-handlebars>{{labels.startTime}}</dt>
-                            <dd>inicio_viagem</dd>
+                            <dd>&nbsp;</dd>
 
                             <dt class="fim_viagem" data-handlebars>{{labels.endTime}}</dt>
-                            <dd>fim_viagem</dd>
+                            <dd>&nbsp;</dd>
                         </dl>
                     </div>
                     <!-- Info da trip FIM -->
