--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <dt class="validade" data-handlebars>**{{labels.validity}}</dt>
                             <dd>dd/mm/yyyy @ hh:ii:ss</dd>
 
-                            <dt class="distancia_total" data-handlebars>**{{labels.total_distance}}</dt>
+                            <dt class="distancia_total" data-handlebars>{{labels.total_distance}}</dt>
                             <dd class="link" data-mostrar="distancias">
                                 <span class="setinhas baixo">&nbsp;</span>
                                 <span class="texto">&nbsp;</span>
@@ -91,7 +91,7 @@
                                 <dt data-mostrado="distancias" class="sub distancia_pe" data-handlebars>{{labels.by_foot}}</dt>
                                 <dd data-mostrado="distancias" class="sub">&nbsp;</dd>
 
-                                <dt data-mostrado="distancias" class="sub distancia_transportes" data-handlebars>**{{labels.by_transport}}</dt>
+                                <dt data-mostrado="distancias" class="sub distancia_transportes" data-handlebars>{{labels.by_transport}}</dt>
                                 <dd data-mostrado="distancias" class="sub">&nbsp;</dd>
 
                             <dt class="duracao_total" data-handlebars>{{labels.total_duration}}</dt>
