--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="./js/jquery.min.js"><\/script>')</script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="./js/bootstrap.min.js"></script>
     <!-- Leaflet -->
