--- a/index.html
+++ b/index.html
@@ -72,46 +72,48 @@
                         <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
                         <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
                         <div class="clear"></div><br><br>
-                        <dl>
-                            <dt class="primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
-                            <dd class="primeiro">&nbsp;</dd>
+                        <dl class="row">
+                            <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
+                            <dd class="col-md-8 primeiro">&nbsp;</dd>
 
-                            <dt class="hora" data-handlebars>{{labels.time}}</dt>
-                            <dd>&nbsp;</dd>
+                            <dt class="hora col-md-4" data-handlebars>{{labels.time}}</dt>
+                            <dd class="col-md-8">&nbsp;</dd>
 
-                            <dt class="validade" data-handlebars>**{{labels.validity}}</dt>
-                            <dd>dd/mm/yyyy @ hh:ii:ss</dd>
+                            <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                            <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
 
-                            <dt class="distancia_total" data-handlebars>{{labels.total_distance}}</dt>
-                            <dd class="link" data-mostrar="distancias">
+                            <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
+                            <dd class="link col-md-8" data-mostrar="distancias">
                                 <span class="setinhas baixo">&nbsp;</span>
                                 <span class="texto">&nbsp;</span>
                                 <span class="setinhas baixo">&nbsp;</span>
                             </dd>
-                                <dt data-mostrado="distancias" class="sub distancia_pe" data-handlebars>{{labels.by_foot}}</dt>
-                                <dd data-mostrado="distancias" class="sub">&nbsp;</dd>
+                                <dt data-mostrado="distancias" class="sub distancia_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
 
-                                <dt data-mostrado="distancias" class="sub distancia_transportes" data-handlebars>{{labels.by_transport}}</dt>
-                                <dd data-mostrado="distancias" class="sub">&nbsp;</dd>
+                                <dt data-mostrado="distancias" class="sub distancia_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
 
-                            <dt class="duracao_total" data-handlebars>{{labels.total_duration}}</dt>
-                            <dd class="link"data-mostrar="duracoes">
+                            <dt class="duracao_total col-md-4" data-handlebars>{{labels.total_duration}}</dt>
+                            <dd class="link col-md-8"data-mostrar="duracoes">
                                 <span class="setinhas baixo">&nbsp;</span>
                                 <span class="texto">&nbsp;</span>
                                 <span class="setinhas baixo">&nbsp;</span>
                             </dd>
-                                <dt data-mostrado="duracoes" class="sub duracao_pe" data-handlebars>{{labels.by_foot}}</dt>
-                                <dd data-mostrado="duracoes" class="sub">&nbsp;</dd>
+                                <dt data-mostrado="duracoes" class="sub duracao_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
 
-                                <dt data-mostrado="duracoes" class="sub duracao_transportes" data-handlebars>{{labels.by_transport}}</dt>
-                                <dd data-mostrado="duracoes" class="sub">&nbsp;</dd>
+                                <dt data-mostrado="duracoes" class="sub duracao_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
 
-                            <dt class="inicio_viagem" data-handlebars>{{labels.startTime}}</dt>
-                            <dd>&nbsp;</dd>
+                            <dt class="inicio_viagem col-md-4" data-handlebars>{{labels.startTime}}</dt>
+                            <dd class="col-md-8">&nbsp;</dd>
 
-                            <dt class="fim_viagem" data-handlebars>{{labels.endTime}}</dt>
-                            <dd>&nbsp;</dd>
+                            <dt class="fim_viagem col-md-4" data-handlebars>{{labels.endTime}}</dt>
+                            <dd class="col-md-8">&nbsp;</dd>
+                            <div class="clear"></div>
                         </dl>
+                        <div class="clear"></div>
                     </div>
                     <!-- Info da trip FIM -->
 
