Bug que mostrava/escondia tudo
Uma vez que eu tinha duas divs com a mesma classe, era mais do que
lógico esse comportamento, apesar de ser bug

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                     <div class="opcoes_avancadas">
                         <a href="#" class="mostrar">Clique aqui para mais opções</a>
-                        <div class="escondido">
+                        <div class="escondido mais_opcoes">
                             <div class="form-group optimize">
                                 <label for="optimize" class="control-label col-lg-4" data-handlebars>{{labels.minimize}}</label>
                                 <div class="col-lg-8" data-handlebars>
