Teste de centro
f*ck you IE!

--- a/teste.html
+++ b/teste.html
@@ -1,20 +1,13 @@
 <html>
 <head>
     <title>Teste</title>
+    <style type="text/css">
+    div.centro { margin: 0 auto; width: 960px; }
+    </style>
 </head>
 <body>
-    <script type="text/javascript">
-        $(function() {
-            fromPlace   = '40.20723377873011,-8.42975914478302';
-            toPlace     = '40.201829773333756,-8.407684564590454';
-            url = 'https://api.ost.pt/trips/plan/?' + 
-                'fromPlace=' + fromPlace +
-                '&toPlace=' + toPlace +
-                '&' + form +
-                '&key=WiWuixVPGHRjvGXRONqwtkhuUQAOalhAxDfemFiJ;';
-        });
-    </script>
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <div class="centro">
+        Lorem ipsum
+    </div>
 </body>
 </html>
