Design para os itinerários

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <div id="sidebar" class="col-md-4 col-md-pull-8">
                 <!-- Direções após a chamada à API -->
                 <div class="resultados">
+                    <!-- Itinerários INICIO -->
+                    <div class="itinerarios">&nbsp;</div>
+                    <!-- Itinerários FIM -->
+
                     <!-- Info da trip INICIO -->
                     <div class="info_trip escondido">
                         <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
