CSS e HTML dos itinerários
beta do beta

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                 <!-- Direções após a chamada à API -->
                 <div class="resultados">
                     <!-- Itinerários INICIO -->
-                    <div class="itinerarios">&nbsp;</div>
+                    <div class="itinerarios">
+                        <h4>Itinerários</h4>
+                        <ul class="ul_itinerarios">&nbsp;</ul>
+                    </div>
                     <!-- Itinerários FIM -->
 
                     <!-- Info da trip INICIO -->
