--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- Direções após a chamada à API -->
                 <div class="resultados">
                     <!-- Itinerários INICIO -->
-                    <div class="itinerarios">
+                    <div class="itinerarios escondido">
                         <h4>Itinerários</h4>
                         <ul class="ul_itinerarios">&nbsp;</ul>
                     </div>
