--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!--
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="./css/bootstrap-ost.css">-->
     <link rel="stylesheet" href="./css/datepicker.css">
     <link rel="stylesheet" href="./css/bootstrap-timepicker.min.css">
     <!-- Optional theme -->
@@ -52,7 +55,7 @@
             </ul>
             
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="glyphicon glyphicon-info-sign"></i> Utilize o botão direito do rato para traçar rotas</a></li>
+                <li><a href="#"><i class="glyphicon glyphicon-info-sign"></i> <span data-handlebars>{{messages.right_mouse}}</span></a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
@@ -70,59 +73,175 @@
                     <!-- Itinerários INICIO -->
                     <div class="itinerarios escondido">
                         <h4>Itinerários</h4>
+
+                        <!-- Itinerários -->
+                        <div class="panel-group" id="accordion">
+                            <div class="panel panel-default it1">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#coll_it1">#1</a>
+                                    </h4>
+                                </div>
+                                <div id="coll_it1" class="panel-collapse collapse in">
+                                    <div class="panel-body">
+                                        <!-- Info da trip INICIO -->
+                                        <div class="info_trip escondido">
+                                            <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
+                                            <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
+                                            <div class="clear"></div><br><br>
+                                            <dl class="row">
+                                                <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
+                                                <dd class="col-md-8 primeiro">&nbsp;</dd>
+
+                                                <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                                                <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
+
+                                                <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
+                                                <dd class="link col-md-8" data-mostrar="distancias">
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                    <span class="texto">&nbsp;</span>
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                </dd>
+                                                    <dt data-mostrado="distancias" class="sub distancia_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                                    <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
+
+                                                    <dt data-mostrado="distancias" class="sub distancia_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                                    <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
+
+                                                <dt class="duracao_total col-md-4" data-handlebars>{{labels.total_duration}}</dt>
+                                                <dd class="link col-md-8"data-mostrar="duracoes">
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                    <span class="texto">&nbsp;</span>
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                </dd>
+                                                    <dt data-mostrado="duracoes" class="sub duracao_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                                    <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
+
+                                                    <dt data-mostrado="duracoes" class="sub duracao_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                                    <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
+
+                                                <div class="clear"></div>
+                                            </dl>
+                                            <div class="clear"></div>
+                                        </div>
+                                        <!-- Info da trip FIM -->
+                                        <div class="direcoes">&nbsp;</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="panel panel-default it2">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#coll_it2">#2</a>
+                                    </h4>
+                                </div>
+                                <div id="coll_it2" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <!-- Info da trip INICIO -->
+                                        <div class="info_trip escondido">
+                                            <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
+                                            <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
+                                            <div class="clear"></div><br><br>
+                                            <dl class="row">
+                                                <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
+                                                <dd class="col-md-8 primeiro">&nbsp;</dd>
+
+                                                <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                                                <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
+
+                                                <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
+                                                <dd class="link col-md-8" data-mostrar="distancias">
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                    <span class="texto">&nbsp;</span>
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                </dd>
+                                                    <dt data-mostrado="distancias" class="sub distancia_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                                    <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
+
+                                                    <dt data-mostrado="distancias" class="sub distancia_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                                    <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
+
+                                                <dt class="duracao_total col-md-4" data-handlebars>{{labels.total_duration}}</dt>
+                                                <dd class="link col-md-8"data-mostrar="duracoes">
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                    <span class="texto">&nbsp;</span>
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                </dd>
+                                                    <dt data-mostrado="duracoes" class="sub duracao_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                                    <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
+
+                                                    <dt data-mostrado="duracoes" class="sub duracao_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                                    <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
+
+                                                <div class="clear"></div>
+                                            </dl>
+                                            <div class="clear"></div>
+                                        </div>
+                                        <!-- Info da trip FIM -->
+                                        <div class="direcoes">&nbsp;</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="panel panel-default it3">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#coll_it3">#3</a>
+                                    </h4>
+                                </div>
+                                <div id="coll_it3" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <!-- Info da trip INICIO -->
+                                        <div class="info_trip escondido">
+                                            <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
+                                            <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
+                                            <div class="clear"></div><br><br>
+                                            <dl class="row">
+                                                <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
+                                                <dd class="col-md-8 primeiro">&nbsp;</dd>
+
+                                                <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                                                <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
+
+                                                <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
+                                                <dd class="link col-md-8" data-mostrar="distancias">
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                    <span class="texto">&nbsp;</span>
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                </dd>
+                                                    <dt data-mostrado="distancias" class="sub distancia_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                                    <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
+
+                                                    <dt data-mostrado="distancias" class="sub distancia_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                                    <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
+
+                                                <dt class="duracao_total col-md-4" data-handlebars>{{labels.total_duration}}</dt>
+                                                <dd class="link col-md-8"data-mostrar="duracoes">
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                    <span class="texto">&nbsp;</span>
+                                                    <span class="setinhas baixo">&nbsp;</span>
+                                                </dd>
+                                                    <dt data-mostrado="duracoes" class="sub duracao_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
+                                                    <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
+
+                                                    <dt data-mostrado="duracoes" class="sub duracao_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
+                                                    <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
+
+                                                <div class="clear"></div>
+                                            </dl>
+                                            <div class="clear"></div>
+                                        </div>
+                                        <!-- Info da trip FIM -->
+                                        <div class="direcoes">&nbsp;</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <ul class="ul_itinerarios">&nbsp;</ul>
                     </div>
                     <!-- Itinerários FIM -->
 
-                    <!-- Info da trip INICIO -->
-                    <div class="info_trip escondido">
-                        <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
-                        <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
-                        <div class="clear"></div><br><br>
-                        <dl class="row">
-                            <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
-                            <dd class="col-md-8 primeiro">&nbsp;</dd>
-
-                            <dt class="hora col-md-4" data-handlebars>{{labels.time}}</dt>
-                            <dd class="col-md-8">&nbsp;</dd>
-
-                            <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
-                            <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
-
-                            <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
-                            <dd class="link col-md-8" data-mostrar="distancias">
-                                <span class="setinhas baixo">&nbsp;</span>
-                                <span class="texto">&nbsp;</span>
-                                <span class="setinhas baixo">&nbsp;</span>
-                            </dd>
-                                <dt data-mostrado="distancias" class="sub distancia_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
-                                <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
-
-                                <dt data-mostrado="distancias" class="sub distancia_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
-                                <dd data-mostrado="distancias" class="sub col-md-8">&nbsp;</dd>
-
-                            <dt class="duracao_total col-md-4" data-handlebars>{{labels.total_duration}}</dt>
-                            <dd class="link col-md-8"data-mostrar="duracoes">
-                                <span class="setinhas baixo">&nbsp;</span>
-                                <span class="texto">&nbsp;</span>
-                                <span class="setinhas baixo">&nbsp;</span>
-                            </dd>
-                                <dt data-mostrado="duracoes" class="sub duracao_pe col-md-4" data-handlebars>{{labels.by_foot}}</dt>
-                                <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
-
-                                <dt data-mostrado="duracoes" class="sub duracao_transportes col-md-4" data-handlebars>{{labels.by_transport}}</dt>
-                                <dd data-mostrado="duracoes" class="sub col-md-8">&nbsp;</dd>
-
-                            <dt class="inicio_viagem col-md-4" data-handlebars>{{labels.startTime}}</dt>
-                            <dd class="col-md-8">&nbsp;</dd>
-
-                            <dt class="fim_viagem col-md-4" data-handlebars>{{labels.endTime}}</dt>
-                            <dd class="col-md-8">&nbsp;</dd>
-                            <div class="clear"></div>
-                        </dl>
-                        <div class="clear"></div>
-                    </div>
-                    <!-- Info da trip FIM -->
 
                     <!-- Resposta da API INICIO -->
                     <div id="direcoes">&nbsp;</div>
@@ -231,12 +350,12 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Modal title</h4>
+                    <h4 class="modal-title">&nbsp;</h4>
                 </div>
 
                 <div class="modal-body">
                     <div class="alert alert-block alert-danger fade in mensagem">
-                        <p>One fine body&hellip;</p>
+                        <p>&nbsp;</p>
                     </div>
                 </div>
 
@@ -264,6 +383,7 @@
     <!-- Handlebars -->
     <script type="text/javascript" src="./js/handlebars.js"></script>
     <script type="text/javascript" src="./js/handlebars_parser.js"></script>
+    <script type="text/javascript" src="./js/config.js"></script>
     <script type="text/javascript">
         var idioma = 'Portuguese';
         //Por causa do cross-domain, não está sendo utilizado
@@ -278,11 +398,11 @@
             userData: locale
         });
         var map, m1, m2, polyline, pontos = [];
+        // $(".collapse").collapse()
     </script>
     <script type="text/javascript" src="./js/scripts.js"></script>
     <script type="text/javascript" src="./js/rotas.js"></script>
     <script type="text/javascript" src="./js/mapas.js"></script>
     <script type="text/javascript" src="./js/forms.js"></script>
-
 </body>
 </html>
