--- a/index.html
+++ b/index.html
@@ -287,7 +287,12 @@
                     </div>
 
                     <div class="opcoes_avancadas">
-                        <a href="#" class="mostrar">Clique aqui para mais opções</a>
+                        <div class="form-group">
+                            <label class="control-label col-lg-4">&nbsp;</label>
+                            <div class="col-lg-8">
+                                <a href="#" class="mostrar" data-handlebars>{{messages.more_options}}</a>
+                            </div>
+                        </div>
                         <div class="escondido mais_opcoes">
                             <div class="form-group optimize">
                                 <label for="optimize" class="control-label col-lg-4" data-handlebars>{{labels.minimize}}</label>
@@ -335,17 +340,18 @@
                             </div>
 
                             <div class="form-group wheelchair">
-                                <label class="control-label col-lg-4" for="wheelchair" data-handlebars>{{labels.wheelchair}}</label>
+                                <label class="control-label col-lg-4" for="wheelchair">&nbsp;</label>
                                 <div class="col-lg-8">
-                                    <input type="checkbox" value="true" name="wheelchair" id="wheelchair" class="form-control1">
+                                    <button type="button" class="btn btn-default btn-xs btn-wheelchair" data-handlebars>{{labels.wheelchair}}</button>
+                                    <input type="hidden" value="false" name="wheelchair" id="wheelchair" class="form-control1">
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="col-lg-3">&nbsp;</div>
-                        <div class="col-lg-9">
+                        <div class="col-lg-4">&nbsp;</div>
+                        <div class="col-lg-8">
                             <button type="submit" class="btn btn-primary" data-handlebars><i class="glyphicon glyphicon-road"></i> {{labels.planTrip}}</button><br>
                             <a class="trocar_idioma" lang="Portuguese">Idioma: PT</a>
                             <a class="trocar_idioma" lang="English">Idioma: EN</a>
@@ -422,9 +428,19 @@
 
     <script type="text/javascript" src="./js/stickUp.js"></script>
     <script type="text/javascript">
+    check_stickUp = function()
+    {
+        if ( $(window).width() >= 960 )
+            $('.mapa').stickUp();
+    }
     jQuery(function($) {
         $(function(){
-            $('.mapa').stickUp();
+            $(window).resize(function(){ check_stickUp(); });
+            check_stickUp();
+            // if ( $('#sidebar').css('display') != 'block' )
+            // alert( $(window).width() );
+            // if ( $(window).width() >= 960 )
+                // $('.mapa').stickUp();
         });
     });
     </script>
