--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     <div class="info_trip escondido">
                                         <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
                                         <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
-                                        <div class="clear"></div><br><br>
+                                        <div class="clear"></div>
                                         <dl class="row">
                                             <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
                                             <dd class="col-md-8 primeiro">&nbsp;</dd>
@@ -104,7 +104,7 @@
                                 <div class="info_trip escondido">
                                     <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
                                     <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
-                                    <div class="clear"></div><br><br>
+                                    <div class="clear"></div>
                                     <dl class="row">
                                         <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
                                         <dd class="col-md-8 primeiro">&nbsp;</dd>
@@ -158,7 +158,7 @@
                                     <div class="info_trip escondido">
                                         <h4 class="titulo_detalhes pull-left" data-handlebars>{{labels.trip_details}}</h4>
                                         <a href="#" class="esconder_info pull-right" data-handlebars><i class="glyphicon glyphicon-eye-close icon_esconder_info"></i></a>
-                                        <div class="clear"></div><br><br>
+                                        <div class="clear"></div>
                                         <dl class="row">
                                             <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
                                             <dd class="col-md-8 primeiro">&nbsp;</dd>
