--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <div class="form-group">
                             <label class="control-label col-lg-4">&nbsp;</label>
                             <div class="col-lg-8">
-                                <a href="#" class="mostrar" data-handlebars>{{messages.more_options}}</a>
+                                <a href="#" class="mostrar" data-handlebars>{{{messages.more_options}}}</a>
                             </div>
                         </div>
                         <div class="escondido mais_opcoes">
