--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
             </article>
             <footer>
-                <a href="#" class="toggle_esquerda btn btn-primary"><i class="glyphicon glyphicon-align-justify"></i></a>
+                <a href="#" class="toggle_esquerda btn btn-info"><i class="glyphicon glyphicon-align-justify"></i></a>
             </footer>
         </div>
         <!-- Esquerda FIM -->
@@ -338,7 +338,6 @@
         <div id="mapa" class="mapa">&nbsp;</div>
         <!-- Mapa FIM -->
 
-        
     </div>
 
     <!-- Mensagens de Alerta INICIO -->
