--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -377,54 +379,6 @@
     <script src="./js/Polyline.encoded.js"></script>
     <script src="./js/bootstrap-datepicker.js"></script>
     <script src="./js/bootstrap-timepicker.min.js"></script>
-
-    <script type="text/javascript">
-    $(function(){
-        /**
-        * Mostra esquerda (itinerários)
-        $('.toggle_esquerda').hover(function(){
-            pai = $(this).parents('div.esquerda');
-
-            if ( $(pai).hasClass('fechado') )
-            {
-                $(pai).animate({
-                    width: '40px'
-                });
-            }
-        }, function(){
-            pai = $(this).parents('div.esquerda');
-            if ( $(pai).hasClass('fechado') )
-            {
-                $(pai).animate({
-                    width: '15px'
-                });
-            }
-        });*/
-
-        /**
-        * Mover direita (Opções do formulário)
-        
-        $('.toggle_direita').hover(function(){
-            pai = $(this).parents('div.direita');
-
-            if ( $(pai).hasClass('fechado') )
-            {
-                $(pai).animate({
-                    width: '40px'
-                });
-            }
-        }, function(){
-            pai = $(this).parents('div.direita');
-            if ( $(pai).hasClass('fechado') )
-            {
-                $(pai).animate({
-                    width: '15px'
-                });
-            }
-        });*/
-    });
-    </script>
-
     <script type="text/javascript" src="./js/locale/Portuguese.js"></script>
     <!-- Handlebars -->
     <script type="text/javascript" src="./js/handlebars.js"></script>
