Alteração dos ícones

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
             </article>
             <footer>
-                <a href="#" class="toggle_esquerda btn btn-info"><i class="glyphicon glyphicon-align-justify"></i></a>
+                <a href="#" class="toggle_esquerda">Resultados</a>
             </footer>
         </div>
         <!-- Esquerda FIM -->
@@ -331,7 +331,7 @@
                 <!-- Formulário FIM -->
             </article>
             <footer>
-                <a href="#" class="toggle_direita btn btn-success"><i class="glyphicon glyphicon-cog"></i></a>
+                <a href="#" class="toggle_direita">Configurações</a>
             </footer>
         </div>
         <!-- Direita FIM -->
