Remoção de marcação TODO

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                             <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
                                             <dd class="col-md-8 primeiro">&nbsp;</dd>
 
-                                            <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                                            <dt class="validade col-md-4" data-handlebars>{{labels.validity}}</dt>
                                             <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
 
                                             <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
@@ -111,7 +111,7 @@
                                         <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
                                         <dd class="col-md-8 primeiro">&nbsp;</dd>
 
-                                        <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                                        <dt class="validade col-md-4" data-handlebars>{{labels.validity}}</dt>
                                         <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
 
                                         <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
@@ -165,7 +165,7 @@
                                             <dt class="col-md-4 primeiro data_hora" data-handlebars>{{labels.date_time}}</dt>
                                             <dd class="col-md-8 primeiro">&nbsp;</dd>
 
-                                            <dt class="validade col-md-4" data-handlebars>**{{labels.validity}}</dt>
+                                            <dt class="validade col-md-4" data-handlebars>{{labels.validity}}</dt>
                                             <dd class="col-md-8">dd/mm/yyyy @ hh:ii:ss</dd>
 
                                             <dt class="distancia_total col-md-4" data-handlebars>{{labels.total_distance}}</dt>
