Alterações do link de idioma

--- a/index.html
+++ b/index.html
@@ -315,8 +315,9 @@
                         <div class="col-lg-4">&nbsp;</div>
                         <div class="col-lg-8">
                             <button type="submit" class="btn btn-primary" data-handlebars><i class="glyphicon glyphicon-road"></i> {{labels.planTrip}}</button><br>
-                            <a class="trocar_idioma" lang="Portuguese">Idioma: PT</a>
-                            <a class="trocar_idioma" lang="English">Idioma: EN</a>
+                            Idioma: 
+                            <a class="trocar_idioma" lang="Portuguese">PT</a> |
+                            <a class="trocar_idioma" lang="English">EN</a>
                         </div>
                     </div>
                 </form>
